# RayTracing

./: .gitmodules  CMakeLists.txt  LICENSE  Libraries.cmake  README.md  Source.cmake
Source/: Camera.h  HitRecord.h  Image.cpp  Image.h  Main.cpp  Material.h  MathUtils.h  Pixel.h  Primitive.h  Ray.h  Scene.h  Sphere.h  VecTypes.h
Source/Core/: Assert.h  Log.h  Macros.h
